# tsl_stack

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  gpu_smoke.csv  pyproject.toml  pytest.ini  sitecustomize.py
_backup_tsl_integrated_pkg_20251102_201337/src/tsl/ingest/: pipeline.py
_migration_backup_20251102_200051/: diff_list.txt
dashboards/metabase/: cards.json
dashboards/superset_sql/: overview.sql
db/migrations/: 20251102_constraints.sql  20251102_nf_errors.sql
docs/adr/: 0001-db-as-sot.md
docs/hist/: ChatGPT-TSF system rebuild.md
runner/: __init__.py
scripts/: add_init_py.py  add_init_py.sh  check_errors.py  cleanup_and_reinstall.sh  dev_env.sh  gpu_one_check.sh  reset_outputs.sh  tidy_layout.sh  unify_src_layout.sh
src/tsl/: __init__.py
src/tsl/cli/: tsl.py
src/tsl/ingest/: parser.py  pipeline.py
src/tsl/nfops/: consolidator.py  db_store.py  wandb_enrich.py
src/tsl/runner/: any_auto_runner.py  auto_runner.py  core.py  error_logging.py  io_utils.py  kwargs_builder.py  nf_compat.py  preprocess.py
src/tsl/storage/: db.py  db_conn.py
src/tsl/tools/: __init__.py  show_props.py
src/tsl/utils/: __init__.py  logging.py  nf_safe_load.py
src/tsl_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_cli.py  test_cli_ingest_db_apply.py  test_contract_schemas.py  test_e2e_learn_save_reload_db.py  test_full_stack_all.py  test_gpu_smoke_one.py  test_heavy_train_save_reload.py  test_ingest.py  test_run_auto_n3.py  test_runner_dry.py
tsl_integrated_pkg/src/tsl/tools/: __init__.py
(+3 files in other folders)
