[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsl-stack"
version = "0.1.0"
description = "Time Series Forecasting System (TSF) — unified CLI and stack"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "TSL System"}]
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0.2",
  "sqlalchemy>=2.0",
  "psycopg[binary,pool]>=3.2",
  "mlflow>=2.13.0",
  "prometheus-client>=0.20.0",
  "typing-extensions>=4.7.1",
  "pydantic>=2.7.0",
  "orjson>=3.9.15"
]

[project.optional-dependencies]
nf = [
  "neuralforecast>=1.7.0",
  "optuna>=3.5.0",
  "torch>=2.2.0",
  "ray[tune]>=2.8.0",
  "wandb>=0.16.0"
]

[project.scripts]
tsl = "tsl.cli.tsl:main"
